first jump into WebAudio API, just plays a tone with a on-off gate button

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 <title>Grains4U</title>
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<body>
+<body onload="init();">
 
 <div id="all">
 
-<h1>hi, welcome to Grains4U!</h1>
+<h1>hi, welcome to Grains4u!</h1>
+
+<button id="gate">Play/Pause Tone</button>
 
 </div>
 <script type="text/javascript" src="main.js"></script>
