--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div id="all">
 
-<h1>hi, welcome to Grains4u! Pooooop</h1>
+<h1>hi, welcome to Grains4u!</h1>
 
 <button id="gate">Play/Pause Tone</button>
 
