implemented button object, stub functions for button working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <h1>hi, welcome to Grains4u!</h1>
 
-<button id="gate">Play/Pause Tone</button>
+<button id="rec_stop">Record/Stop Recording</button>
+<button id="play">Play/Pause Recording</button>
 
 </div>
 <script type="text/javascript" src="main.js"></script>
