testing git-s3 deployment from new directory location

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <button id="rec_stop">Record/Stop Recording</button>
 <button id="play">Play/Pause Recording</button>
+<button id="test">Test Button!</button>
 
 </div>
 <script type="text/javascript" src="main.js"></script>
