--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div id="all">
 
 <h1>hi, welcome to Grains4u!</h1>
+<h3>test header</h3>
 
 <button id="rec_stop">Record/Stop Recording</button>
 <button id="play">Play/Pause Recording</button>
