added form for grain 1 info input on index.html, going to try storing AudioBuffer at end of recording

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 <button id="rec_stop">Record/Stop Recording</button>
 <button id="play">Play/Pause Recording</button>
 
+<form action="">
+  <fieldset>
+    <legend>Grain 1:</legend>
+    <label>Grain Start (percentage):</label>
+    <input type="text" id="grain_start_0"><br>
+    <label>Grain Length (Samples):</label>
+    <input type="text" id="grain_length_0"><br>
+    <label>Grain Play Rate (percentage (0,2]):</label>
+    <input type="text" id="grain_rate_0"><br><br>
+    <input type="submit" id="grain_submit" value="Submit">
+  </fieldset>
+</form>
+
 </div>
 <script type="text/javascript" src="main.js"></script>
 </body>
