seperated into different javascript files

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 <button id="g_submit"> Submit </button>
 
 </div>
+<script type="text/javascript" src="audio_buffer_slice.js"></script>
+<script type="text/javascript" src="constants.js"></script>
+<script type="text/javascript" src="grain.js"></script>
+<script type="text/javascript" src="gbutton.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
