implemented GrainUI object

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <input type="text" id="g_start_0"><br>
     <label>Grain Length (Samples):</label>
     <input type="text" id="g_length_0"><br>
-    <label>Grain Play Rate (percentage (0,2]):</label>
-    <input type="text" id="g_rate_0"><br><br>
+    <label>Grain Detune (between +/- 1200):</label>
+    <input type="text" id="g_detune_0"><br><br>
   </fieldset>
 </form>
 
@@ -31,6 +31,7 @@
 </div>
 <script type="text/javascript" src="audio_buffer_slice.js"></script>
 <script type="text/javascript" src="constants.js"></script>
+<script type="text/javascript" src="grain_ui.js"></script>
 <script type="text/javascript" src="grain.js"></script>
 <script type="text/javascript" src="gbutton.js"></script>
 <script type="text/javascript" src="main.js"></script>
