--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
   <fieldset>
     <legend>Grain 1:</legend>
     <label>Grain Start (percentage):</label>
-    <input type="text" id="g_start_0"><br>
+    <input type="range" id="g_start_0"><br>
     <label>Grain Length (Samples):</label>
-    <input type="text" id="g_length_0"><br>
+    <input type="range" id="g_length_0"><br>
     <label>Grain Detune (between +/- 1200):</label>
-    <input type="text" id="g_detune_0"><br><br>
+    <input type="range" id="g_detune_0"><br><br>
   </fieldset>
 </form>
-
-<button id="g_submit"> Submit </button>
 
 </div>
 <script type="text/javascript" src="audio_buffer_slice.js"></script>
