outlined GrainUI functions to write

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 
 <button id="rec_stop">Record/Stop Recording</button>
 
+</div>
+
+<script type="text/javascript" src="audio_buffer_slice.js"></script>
+<script type="text/javascript" src="constants.js"></script>
+<script type="text/javascript" src="grain_ui.js"></script>
+<script type="text/javascript" src="grain.js"></script>
+<script type="text/javascript" src="gbutton.js"></script>
+<script type="text/javascript" src="main.js"></script>
+</body>
+</html>
+
+<!-- Old Grain form
 <form>
   <fieldset>
     <legend>Grain 1:</legend>
@@ -26,69 +38,4 @@
 </form>
 
 <button id="g_play_0"> Play Grain 1 </button>
-
-<form>
-  <fieldset>
-    <legend>Grain 2:</legend>
-    <label>Grain Start (percentage):</label>
-    <input type="range" id="g_start_1"><br>
-    <label>Grain Length (Samples):</label>
-    <input type="range" id="g_length_1"><br>
-    <label>Grain Detune (between +/- 1200):</label>
-    <input type="range" id="g_detune_1"><br><br>
-  </fieldset>
-</form>
-
-<button id="g_play_1"> Play Grain 2 </button>
-
-<form>
-  <fieldset>
-    <legend>Grain 2:</legend>
-    <label>Grain Start (percentage):</label>
-    <input type="range" id="g_start_2"><br>
-    <label>Grain Length (Samples):</label>
-    <input type="range" id="g_length_2"><br>
-    <label>Grain Detune (between +/- 1200):</label>
-    <input type="range" id="g_detune_2"><br><br>
-  </fieldset>
-</form>
-
-<button id="g_play_2"> Play Grain 3 </button>
-
-<form>
-  <fieldset>
-    <legend>Grain 2:</legend>
-    <label>Grain Start (percentage):</label>
-    <input type="range" id="g_start_3"><br>
-    <label>Grain Length (Samples):</label>
-    <input type="range" id="g_length_3"><br>
-    <label>Grain Detune (between +/- 1200):</label>
-    <input type="range" id="g_detune_3"><br><br>
-  </fieldset>
-</form>
-
-<button id="g_play_3"> Play Grain 4 </button>
-
-<form>
-  <fieldset>
-    <legend>Grain 2:</legend>
-    <label>Grain Start (percentage):</label>
-    <input type="range" id="g_start_4"><br>
-    <label>Grain Length (Samples):</label>
-    <input type="range" id="g_length_4"><br>
-    <label>Grain Detune (between +/- 1200):</label>
-    <input type="range" id="g_detune_4"><br><br>
-  </fieldset>
-</form>
-
-<button id="g_play_4"> Play Grain 5 </button>
-
-</div>
-<script type="text/javascript" src="audio_buffer_slice.js"></script>
-<script type="text/javascript" src="constants.js"></script>
-<script type="text/javascript" src="grain_ui.js"></script>
-<script type="text/javascript" src="grain.js"></script>
-<script type="text/javascript" src="gbutton.js"></script>
-<script type="text/javascript" src="main.js"></script>
-</body>
-</html>
+-->
