I dare say, ready to turn in?

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
 <div id="all">
 
-<h1>hi, welcome to Grains4u!</h1>
-
-<button id="rec_stop">Record/Stop Recording</button>
+<div id="rec_stop">Record</div>
 
 </div>
 
@@ -24,19 +22,3 @@
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
-
-<!-- Old Grain form
-<form>
-  <fieldset>
-    <legend>Grain 1:</legend>
-    <label>Grain Start (percentage):</label>
-    <input type="range" id="g_start_0"><br>
-    <label>Grain Length (Samples):</label>
-    <input type="range" id="g_length_0"><br>
-    <label>Grain Detune (between +/- 1200):</label>
-    <input type="range" id="g_detune_0"><br><br>
-  </fieldset>
-</form>
-
-<button id="g_play_0"> Play Grain 1 </button>
--->
