Fix position of Record button on screen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <div id="all">
 
-<div id="rec_stop">Record</div>
+<div id="rec_stop_wrapper">
+  <div id="rec_stop">Record</div>
+</div>
 
 </div>
 
