November 4 - added pause,play,different buffers

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body onload="init();">
 
 <div id="all">
-
+<!-- 
 <div id="rec_stop_wrapper">
   <div id="rec_stop">Record</div>
-</div>
+</div> -->
 
 </div>
 
