--- a/app/index.html
+++ b/app/index.html
@@ -2,18 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Grains4U</title>
+<title>Sonic_Sculpt</title>
 <link rel="stylesheet" type="text/css" href="main.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body onload="init();">
 
 <div id="all">
-<!-- 
-<div id="rec_stop_wrapper">
-  <div id="rec_stop">Record</div>
-</div> -->
-
 </div>
 
 <script type="text/javascript" src="audio_buffer_slice.js"></script>
