--- a/app/index.html
+++ b/app/index.html
@@ -6,15 +6,15 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
-<body onload="init();">
-
-<div id="all">
-</div>
-
+<body>
+  <div id="all">
+  </div>
 <script type="text/javascript" src="audio_buffer_slice.js"></script>
 <script type="text/javascript" src="constants.js"></script>
+<script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="grain_ui.js"></script>
 <script type="text/javascript" src="grain.js"></script>
+<script type="text/javascript" src="audio-recorder.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
