adding in logic for about button

--- a/app/index.html
+++ b/app/index.html
@@ -14,24 +14,36 @@
       <div class="nav-container">
         <ul id="menu" class="main-nav">
           <li>
-            <div class="homeButton">
-              <p><a href="index.html">~Sonic Sculpt~</a></p>
+            <div id="homeButton">
+              <p>~Sonic Sculpt~</p>
             </div>
           </li>
           <li>
-            <a href="exercises.html" data-page="exercises" data-title="Exercises" class="link">Explore
+            <a href="" data-title="Explore" class="link">Explore
             </a>
           </li>
           <li>
-            <a href="semester-project.html" data-page="semester-project" data-title="Semester-Project" class="link">About
-            </a>
+            <p id = "about-button">About</p>
           </li>
         </ul>
       </div>
+
       <div class="home-page-create">
+        <div id="myNav" class="overlay">
+    <!-- Overlay content -->
+    <div class="overlay-content">
+    <p> Sonic Sculpt is a web app that let's you manipulate and collaborate on audio sculptures using granular synthesis.
+  <br>
+  <br>
+  Created by Maxime Gordon 2021.
+    </p>
+    </div>
+  </div>
         <button type="button" id="createRoomID">Create A Room</button>
+
       </div>
       <div id="all">
+
       </div>
       <script type="text/javascript" src="audio_buffer_slice.js"></script>
       <script type="text/javascript" src="constants.js"></script>
