implementing audio and rooms getting recalled

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
         <ul id="menu" class="main-nav">
           <li>
             <div id="homeButton">
-              <p>~Sonic Sculpt~</p>
+              <a href = '/'> <p> ~Sonic Sculpt~</p></a>
             </div>
           </li>
           <li>
