--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
       </div>
       <div id="all">
       </div>
+  <script src="https://cdn.socket.io/4.4.0/socket.io.min.js" integrity="sha384-1fOn6VtTq3PWwfsOrk45LnYcGosJwzMHv+Xh/Jx5303FVOXzEnw0EpLv30mtjmlj" crossorigin="anonymous"></script>
       <script type="text/javascript" src="audio_buffer_slice.js"></script>
       <script type="text/javascript" src="constants.js"></script>
       <script type="text/javascript" src="utils.js"></script>
