creating explore page!

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
             </div>
           </li>
           <li>
-            <a href="" data-title="Explore" class="link">Explore
+            <a href="/explore/" data-title="Explore" class="link">Explore
             </a>
           </li>
           <li>
