styling and trying to get form submission to work..not yet there

--- a/app/explore.html
+++ b/app/explore.html
@@ -50,9 +50,9 @@
             <a href="" data-title="Explore" class="link">Explore
             </a>
           </li>
-          <!-- <li>
-            <p id="about-button">About</p>
-          </li> -->
+          <li>
+            <a href="/about/" data-title="About" class="link">About </a>
+          </li>
         </ul>
       </div>
       <div class = roomWrapper>
