--- a/app/index.html
+++ b/app/index.html
@@ -23,21 +23,12 @@
             <a href="/explore/" data-title="Explore" class="link">Explore
             </a>
           </li>
-          <!-- <li>
-            <p id="about-button">About</p>
-          </li> -->
+          <li>
+            <a href="/about/" data-title="About" class="link">About </a>
+          </li>
         </ul>
       </div>
       <div class="home-page-create">
-        <div id="myNav" class="overlay">
-          <div class="overlay-content">
-            <p> Sonic Sculpt is a web app that let's you manipulate and collaborate on audio sculptures using granular synthesis.
-              <br>
-              <br>
-              Created by Maxime Gordon 2021.
-            </p>
-          </div>
-        </div>
         <button type="button" id="createRoomID">Create A Room</button>
       </div>
       <div id = saveTest>
