--- a/app/about.html
+++ b/app/about.html
@@ -33,7 +33,7 @@
       <div id="myNav" class="overlay">
       <div class="overlay-content">
           <p> Sonic Sculpt is a web app that let's you manipulate audio using granular synthesis.
-            Record audio into the app and save it to allow others to explore your audio files.
+            Record audio into the app and save it to allow others to explore and sculpt your audio files.
             <br>
             <br>
             Created by Maxime Gordon 2021.
