--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name = "viewport" content = "width = device-width">
   <title>Sonic_Sculpt</title>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
