commenting and clean up

--- a/app/explore.html
+++ b/app/explore.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <script>
     window.addEventListener("load", (event) => {
+      //get all the rooms from the server and display them on the page :)
       console.log("window loaded.");
       var url = '/rooms/';
       var roomsContainer = document.getElementById('rooms');
