--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width = device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Sonic_Sculpt</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
