final clean up ! ready to submit

--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,8 @@
           </li>
         </ul>
       </div>
-      <div class="home-page-create">
-        <button type="button" id="createRoomID">Create A Room</button>
+      <div class="home-page-create" >
+        <button style="display:none;" type="button" id="createRoomID">Create A Room</button>
       </div>
       <div id=saveTest>
         <!-- form styling resource: -->
@@ -55,7 +55,7 @@
           <input id="submit2" type="submit" value="Submit" >
         </div>
           </form>
-        <div id="roomDetailsID">
+        <div id="roomDetailsID" style="display:none;">
         </div>
         <button id="saveRoomId" style="display: none;">Save Room</button>
         <div id="all">
