--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,10 @@
         <div id="all">
         </div>
         <!-- <script src="https://cdn.socket.io/4.4.0/socket.io.min.js" integrity="sha384-1fOn6VtTq3PWwfsOrk45LnYcGosJwzMHv+Xh/Jx5303FVOXzEnw0EpLv30mtjmlj" crossorigin="anonymous"></script> -->
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+          
+        </script>
         <script type="text/javascript" src="nouislider.js"></script>
         <script type="text/javascript" src="audio_buffer_slice.js"></script>
         <script type="text/javascript" src="constants.js"></script>
